--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "1.5.0",
+    "@heroicons/react": "v1",
+    "@reduxjs/toolkit": "1.9.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "firebase": "^9.23.0",
+    "firebase-admin": "^11.9.0",
     "next": "latest",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-redux": "7.2.2",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "firebase": "^8.6.1",
-    "firebase-admin": "^9.8.0"
+    "react": "18.2.0",
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.1.1",
+    "react-responsive-carousel": "^3.2.23"
   },
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.15",
-    "tailwindcss": "^2.1.2"
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2"
   }
 }
