checkout page built along with user authentication

--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
     "build": "next build",
     "start": "next start"
   },
+  "exports": {
+    "./client": "./client.js"
+  },
   "dependencies": {
     "@heroicons/react": "v1",
     "@reduxjs/toolkit": "1.9.5",
+    "@svgr/webpack": "^8.0.1",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "firebase": "^9.23.0",
+    "firebase": "^10.0.0",
     "firebase-admin": "^11.9.0",
-    "next": "latest",
-    "react": "18.2.0",
+    "next": "13.4.9",
+    "next-auth": "^4.22.1",
+    "react": "^18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
-    "react-redux": "8.1.1",
-    "react-responsive-carousel": "^3.2.23"
+    "react-redux": "^8.1.1",
+    "react-responsive-carousel": "^3.2.23",
+    "redux": "^4.2.1"
   },
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2"
   }
 }
